Add sbt install instructions and package directory. Exclude previous cli apps source files from sbt directory